name:               chicagohaskell
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base        >= 4.7 && < 4.9
                  , hakyll      >= 4.6 && < 4.8
                  , hakyll-sass >= 0.2 && < 0.3
  ghc-options:      -threaded
  default-language: Haskell2010
