name:               chicagohaskell
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  hs-source-dirs:   src/
  main-is:          site.hs
  ghc-options:      -threaded
  default-language: Haskell2010
  build-depends:    base        >= 4.7 && < 4.9
                  , filepath    >= 1.4 && < 1.5
                  , hakyll      >= 4.6 && < 4.8
                  , hakyll-sass >= 0.2 && < 0.3
